fix bugs from bug list

--- a/index.html
+++ b/index.html
@@ -133,16 +133,18 @@
                 Премия «Банкгода 2019» — подведение итогов работы банков,ведущих коммерческую деятельность на территории
                 Республики Беларусь в 2019 году.
               </p>
-              <p>
-                Премия проходит при официальной поддержке Ассоциации белорусских банков,а также при консультационной
-                поддержке Национального банка Республики Беларусь.
-              </p>
-              <p>
-                Учредитель премии — финансовый портал Myfin.by, организатор — агентство GUARDO. Премия проходит ежегодно
-                с 2015 года. Подведение итогов проводится на основе данных, предоставленных банками в оргкомитет премии
-                путем заполнения заявки. Церемония награждения представляет собойо фициальную часть, а также фуршет и
-                развлекательную программу.
-              </p>
+              <div data-js="hidden-text" data-height="">
+                <p>
+                  Премия проходит при официальной поддержке Ассоциации белорусских банков,а также при консультационной
+                  поддержке Национального банка Республики Беларусь.
+                </p>
+                <p>
+                  Учредитель премии — финансовый портал Myfin.by, организатор — агентство GUARDO. Премия проходит ежегодно
+                  с 2015 года. Подведение итогов проводится на основе данных, предоставленных банками в оргкомитет премии
+                  путем заполнения заявки. Церемония награждения представляет собойо фициальную часть, а также фуршет и
+                  развлекательную программу.
+                </p>
+              </div>
             </div>
             <div class="organizators">
               <div class="organizators__item">
@@ -184,7 +186,7 @@
             <div class="block-title__suptitle">
               Голосование
             </div>
-            <h2>Кто станет официальным лицом премии «Банк года 2020»?</h2>
+            <h3>Кто станет официальным лицом премии «Банк года 2020»?</h3>
           </div>
 
           <a href="/bg/voting-girls/" class="btn btn--type-2 arrow-animated">Голосовать <span class="icon icon-arrow-right"></span></a>
@@ -334,16 +336,18 @@
                 hic mollitia aliquid quia nulla harum nobis at! Labore, cumque qui obcaecati nemo voluptatum fuga
                 nesciunt!
               </p>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad, impedit. Quo repudiandae consequatur iste
-                hic mollitia aliquid quia nulla harum nobis at! Labore, cumque qui obcaecati nemo voluptatum fuga
-                nesciunt!
-              </p>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad, impedit. Quo repudiandae consequatur iste
-                hic mollitia aliquid quia nulla harum nobis at! Labore, cumque qui obcaecati nemo voluptatum fuga
-                nesciunt!
-              </p>
+              <div data-js="hidden-text" data-height="">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad, impedit. Quo repudiandae consequatur iste
+                  hic mollitia aliquid quia nulla harum nobis at! Labore, cumque qui obcaecati nemo voluptatum fuga
+                  nesciunt!
+                </p>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad, impedit. Quo repudiandae consequatur iste
+                  hic mollitia aliquid quia nulla harum nobis at! Labore, cumque qui obcaecati nemo voluptatum fuga
+                  nesciunt!
+                </p>
+              </div>
             </div>
           </div>
           <div class="infoblock__container">
@@ -421,7 +425,7 @@
       <a href="#fast-scroll-btn-switch-down" class="fast-scroll-btn__item hover-color-default visible"
         data-js="slow-scroll">
         <span class="icon icon-arrow-up-long"></span>
-      </adiv>
+      </a>
     </div>
 
     <!-- Партнеры -->
@@ -535,6 +539,7 @@
   <script src="./js/global.js"></script>
   <script src="./js/container-animation.js"></script>
   <script src="./js/fast-scroll-btn.js"></script>
+  <script src="./js/hide-text.js"></script>
   <script src="./js/gallery.js"></script>
   <script src="./js/modal.js"></script>
   <!-- <script src="./js/video-frame.js"></script> -->
