--- a/rules/index.html
+++ b/rules/index.html
@@ -36,7 +36,7 @@
           </button>
           <div class="main-menu__inner">
             <ul class="main-menu__links">
-              <li>
+              <li class="active">
                 <a href="/bg/rules/">Положение </a>
               </li>
               <li>
@@ -45,7 +45,7 @@
               <li>
                 <a href="/bg/experts/">Эксперты</a>
               </li>
-              <li class="active">
+              <li>
                 <a href="/bg/voting-banks/">Голосование</a>
               </li>
               <li>
@@ -130,11 +130,11 @@
                   </li>
                 </ol>
               </div>
-              <!-- <div class="text-content__section">
+              <div class="text-content__section">
                 <a href="#" class="link-default">
-                  <span class="icon icon--l icon-pdf"></span><span>Положение о премии Банк года в Беларуси – 2020</span>
+                  <span class="icon icon--l icon-pdf fs-25"></span><span>Положение о премии Банк года в Беларуси – 2020</span>
                 </a>
-              </div> -->
+              </div>
             </div>
           </div>
           <div class="two-cols-container__sidebar">
@@ -193,7 +193,7 @@
       <a href="#fast-scroll-btn-switch-down" class="fast-scroll-btn__item hover-color-default visible"
         data-js="slow-scroll">
         <span class="icon icon-arrow-up-long"></span>
-        </adiv>
+        </a>
     </div>
 
     <!-- Партнеры -->
@@ -250,7 +250,7 @@
         <nav class="main-menu">
           <div class="main-menu__inner">
             <ul class="main-menu__links">
-              <li>
+              <li class="active">
                 <a href="/bg/rules/">Положение </a>
               </li>
               <li>
@@ -259,7 +259,7 @@
               <li>
                 <a href="/bg/experts/">Эксперты</a>
               </li>
-              <li class="active">
+              <li>
                 <a href="/bg/voting-banks/">Голосование</a>
               </li>
               <li>
