--- a/contacts/index.html
+++ b/contacts/index.html
@@ -108,7 +108,7 @@
                     <span class="icon icon-mail"></span><a href="mailto:bankgoda@grd.by" target="_blank"
                       rel="nofollow">bankgoda@grd.by</a>
                   </div>
-                  <div class="contacts-info__item-info contacts-info__item-info--with-cion">
+                  <div class="contacts-info__item-info contacts-info__item-info--not-underlined contacts-info__item-info--with-cion">
                     <span class="icon icon-instagram"></span><a href="https://www.instagram.com/bankgoda/" target="_blank"
                       rel="nofollow">@ bankgoda</a>
                   </div>
@@ -195,7 +195,7 @@
       <a href="#fast-scroll-btn-switch-down" class="fast-scroll-btn__item hover-color-default visible"
         data-js="slow-scroll">
         <span class="icon icon-arrow-up-long"></span>
-        </adiv>
+        </a>
     </div>
 
     <!-- Партнеры -->
