fix bugs from bug list

--- a/index.html
+++ b/index.html
@@ -135,14 +135,10 @@
               </p>
               <div data-js="hidden-text" data-height="">
                 <p>
-                  Премия проходит при официальной поддержке Ассоциации белорусских банков,а также при консультационной
-                  поддержке Национального банка Республики Беларусь.
+                  Премия проходит при официальной поддержке Ассоциации белорусских банков,а также при консультационной поддержке Национального банка Республики Беларусь.
                 </p>
                 <p>
-                  Учредитель премии — финансовый портал Myfin.by, организатор — агентство GUARDO. Премия проходит ежегодно
-                  с 2015 года. Подведение итогов проводится на основе данных, предоставленных банками в оргкомитет премии
-                  путем заполнения заявки. Церемония награждения представляет собойо фициальную часть, а также фуршет и
-                  развлекательную программу.
+                  Учредитель премии — финансовый портал Myfin.by, организатор — агентство GUARDO. Премия проходит ежегодно с 2015 года. Подведение итогов проводится на основе данных, предоставленных банками в оргкомитет премии путем заполнения заявки. Церемония награждения представляет собойо фициальную часть, а также фуршет и развлекательную программу.
                 </p>
               </div>
             </div>
